src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_logspace(value start, value end, int64_t steps, double base, int options_kind, int options_device);
value atg_logspace_out(value out, value start, value end, int64_t steps, double base);
value atg_logspace_scalar_tensor(value start, value end, int64_t steps, double base, int options_kind, int options_device);
value atg_logspace_scalar_tensor_out(value out, value start, value end, int64_t steps, double base);
value atg_logspace_tensor_scalar(value start, value end, int64_t steps, double base, int options_kind, int options_device);
value atg_logspace_tensor_scalar_out(value out, value start, value end, int64_t steps, double base);
value atg_logspace_tensor_tensor(value start, value end, int64_t steps, double base, int options_kind, int options_device);
value atg_logspace_tensor_tensor_out(value out, value start, value end, int64_t steps, double base);
value atg_logsumexp(value self, value dim, int keepdim);
value atg_logsumexp_out(value out, value self, value dim, int keepdim);
value atg_lstm(value input, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg_lstm_cell(value input, value hx, value w_ih, value w_hh, value b_ih, value b_hh);
value atg_lstm_data(value data, value batch_sizes, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
void atg_lstm_mps_backward(value out0, value out1, value out2, value grad_y, value grad_hy, value grad_cy, value z_state, value cell_state_fwd, value input, value layersOutputs, value hx, value params, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
value atg_lt(value self, value other);
value atg_lt_(value self, value other);
value atg_lt_scalar_out(value out, value self, value other);
value atg_lt_tensor(value self, value other);
value atg_lt_tensor_(value self, value other);
value atg_lt_tensor_out(value out, value self, value other);
value atg_lu_solve(value self, value LU_data, value LU_pivots);
value atg_lu_solve_out(value out, value self, value LU_data, value LU_pivots);
value atg_lu_unpack(value LU_data, value LU_pivots, int unpack_data, int unpack_pivots);
value atg_lu_unpack_out(value P, value L, value U, value LU_data, value LU_pivots, int unpack_data, int unpack_pivots);
value atg_margin_ranking_loss(value input1, value input2, value target, double margin, int64_t reduction);
value atg_masked_fill(value self, value mask, value value_);
value atg_masked_fill_(value self, value mask, value value_);
value atg_masked_fill_scalar_out(value out, value self, value mask, value value_);
value atg_masked_fill_tensor(value self, value mask, value value_);
value atg_masked_fill_tensor_(value self, value mask, value value_);
value atg_masked_fill_tensor_out(value out, value self, value mask, value value_);
value atg_masked_scatter(value self, value mask, value source);
value atg_masked_scatter_(value self, value mask, value source);
value atg_masked_scatter_backward(value grad_output, value mask, value sizes);
value atg_masked_scatter_out(value out, value self, value mask, value source);
value atg_masked_select(value self, value mask);
value atg_masked_select_backward(value grad, value input, value mask);
value atg_masked_select_out(value out, value self, value mask);
value atg_matmul(value self, value other);
value atg_matmul_out(value out, value self, value other);
value atg_matrix_exp(value self);
value atg_matrix_exp_backward(value self, value grad);
value atg_matrix_h(value self);
value atg_matrix_power(value self, int64_t n);
value atg_matrix_power_out(value out, value self, int64_t n);
value atg_max(value self);
value atg_max_dim(value self, int64_t dim, int keepdim);
value atg_max_dim_max(value max, value max_values, value self, int64_t dim, int keepdim);
value atg_max_other(value self, value other);
value atg_max_out(value out, value self, value other);
value atg_max_pool1d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool1d_with_indices(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool2d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool2d_backward(value grad_output, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool2d_backward_out(value out, value grad_output, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool2d_with_indices(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool2d_with_indices_backward(value grad_output, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode, value indices);
value atg_max_pool2d_with_indices_backward_grad_input(value grad_input, value grad_output, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode, value indices);
value atg_max_pool2d_with_indices_out(value out, value indices, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool3d(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);