src/bindings/torch_bindings_generated4.ml


  let stubs_logspace =
    foreign
      "atg_logspace"
      (scalar @-> scalar @-> int64_t @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_logspace_out =
    foreign
      "atg_logspace_out"
      (gc_tensor @-> scalar @-> scalar @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_logspace_scalar_tensor =
    foreign
      "atg_logspace_scalar_tensor"
      (scalar
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_logspace_scalar_tensor_out =
    foreign
      "atg_logspace_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_logspace_tensor_scalar =
    foreign
      "atg_logspace_tensor_scalar"
      (gc_tensor
       @-> scalar
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_logspace_tensor_scalar_out =
    foreign
      "atg_logspace_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_logspace_tensor_tensor =
    foreign
      "atg_logspace_tensor_tensor"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_logspace_tensor_tensor_out =
    foreign
      "atg_logspace_tensor_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_logsumexp =
    foreign
      "atg_logsumexp"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_logsumexp_out =
    foreign
      "atg_logsumexp_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_lstm =
    foreign
      "atg_lstm"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_lstm_cell =
    foreign
      "atg_lstm_cell"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs_lstm_data =
    foreign
      "atg_lstm_data"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_lstm_mps_backward =
    foreign
      "atg_lstm_mps_backward"
      (gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> int
       @-> int64_t
       @-> double
       @-> int
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_lt = foreign "atg_lt" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_lt_ = foreign "atg_lt_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_lt_scalar_out =
    foreign
      "atg_lt_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_lt_tensor =
    foreign "atg_lt_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lt_tensor_ =
    foreign "atg_lt_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lt_tensor_out =
    foreign
      "atg_lt_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lu_solve =
    foreign "atg_lu_solve" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lu_solve_out =
    foreign
      "atg_lu_solve_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lu_unpack =
    foreign
      "atg_lu_unpack"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs_lu_unpack_out =
    foreign
      "atg_lu_unpack_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_margin_ranking_loss =
    foreign
      "atg_margin_ranking_loss"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_masked_fill =
    foreign "atg_masked_fill" (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_masked_fill_ =
    foreign
      "atg_masked_fill_"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_masked_fill_scalar_out =
    foreign
      "atg_masked_fill_scalar_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_masked_fill_tensor =
    foreign
      "atg_masked_fill_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_fill_tensor_ =
    foreign
      "atg_masked_fill_tensor_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_fill_tensor_out =
    foreign
      "atg_masked_fill_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_scatter =
    foreign
      "atg_masked_scatter"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_scatter_ =
    foreign
      "atg_masked_scatter_"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_scatter_backward =
    foreign
      "atg_masked_scatter_backward"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_masked_scatter_out =
    foreign
      "atg_masked_scatter_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_select =
    foreign "atg_masked_select" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_select_backward =
    foreign
      "atg_masked_select_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_masked_select_out =
    foreign
      "atg_masked_select_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_matmul =
    foreign "atg_matmul" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_matmul_out =
    foreign
      "atg_matmul_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_matrix_exp = foreign "atg_matrix_exp" (gc_tensor @-> returning raw_tensor)

  let stubs_matrix_exp_backward =
    foreign "atg_matrix_exp_backward" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_matrix_h = foreign "atg_matrix_h" (gc_tensor @-> returning raw_tensor)

  let stubs_matrix_power =
    foreign "atg_matrix_power" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_matrix_power_out =
    foreign
      "atg_matrix_power_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_max = foreign "atg_max" (gc_tensor @-> returning raw_tensor)

  let stubs_max_dim =
    foreign
      "atg_max_dim"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_max_dim_max =
    foreign
      "atg_max_dim_max"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;
end

module C3 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_max_other =
    foreign "atg_max_other" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_max_out =
    foreign "atg_max_out" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_max_pool1d =
    foreign
      "atg_max_pool1d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool1d_with_indices =
    foreign
      "atg_max_pool1d_with_indices"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_max_pool2d =
    foreign
      "atg_max_pool2d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool2d_backward =
    foreign
      "atg_max_pool2d_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool2d_backward_out =
    foreign
      "atg_max_pool2d_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool2d_with_indices =
    foreign
      "atg_max_pool2d_with_indices"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_max_pool2d_with_indices_backward =
    foreign
      "atg_max_pool2d_with_indices_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool2d_with_indices_backward_grad_input =
    foreign
      "atg_max_pool2d_with_indices_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool2d_with_indices_out =
    foreign
      "atg_max_pool2d_with_indices_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_max_pool3d =
    foreign
      "atg_max_pool3d"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;
